--- a/index.ipynb
+++ b/index.ipynb
@@ -67,9 +67,25 @@
     "    (0x1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, True, True),\n",
     ")\n",
     "\n",
-    "\n",
-    "\n",
     "# iterate through components\n",
+    "for secret, testnet, compressed in components:\n",
+    "    # get the private key in 32-byte big-endian: num.to_bytes(32, 'big')\n",
+    "    secret_bytes = secret.to_bytes(32, 'big')\n",
+    "    # prepend b'\\x80' for mainnet, b'\\xef' for testnet\n",
+    "    if testnet:\n",
+    "        prefix = b'\\xef'\n",
+    "    else:\n",
+    "        prefix = b'\\x80'\n",
+    "    # append b'\\x01' for compressed\n",
+    "    if compressed:\n",
+    "        suffix = b'\\x01'\n",
+    "    else:\n",
+    "        suffix = b''\n",
+    "    # base58 the whole thing with checksum\n",
+    "    wif = encode_base58_checksum(prefix + secret_bytes + suffix)\n",
+    "    print(wif)\n",
+    "\n",
+    "\n",
     "    # get the private key in 32-byte big-endian: num.to_bytes(32, 'big')\n",
     "    # prepend b'\\x80' for mainnet, b'\\xef' for testnet\n",
     "    # append b'\\x01' for compressed\n",
