--- a/index.ipynb
+++ b/index.ipynb
@@ -83,14 +83,7 @@
     "        suffix = b''\n",
     "    # base58 the whole thing with checksum\n",
     "    wif = encode_base58_checksum(prefix + secret_bytes + suffix)\n",
-    "    print(wif)\n",
-    "\n",
-    "\n",
-    "    # get the private key in 32-byte big-endian: num.to_bytes(32, 'big')\n",
-    "    # prepend b'\\x80' for mainnet, b'\\xef' for testnet\n",
-    "    # append b'\\x01' for compressed\n",
-    "    # base58 the whole thing with checksum\n",
-    "    # print the wif"
+    "    print(wif)\n"
    ]
   },
   {
