--- a/index.ipynb
+++ b/index.ipynb
@@ -78,6 +78,8 @@
     "    (0x1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, True, True),\n",
     ")\n",
     "\n",
+    "\n",
+    "enco\n",
     "# iterate through components\n",
     "for secret, testnet, compressed in components:\n",
     "    # get the private key in 32-byte big-endian: num.to_bytes(32, 'big')\n",
