automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,11 +117,19 @@
     "class PrivateKey(PrivateKey):\n",
     "\n",
     "    def wif(self, compressed=True, testnet=False):\n",
-    "        # convert the secret from integer to a 32-bytes in big endian using num.to_bytes(32, 'big')\n",
+    "        secret_bytes = self.secret.to_bytes(32, 'big')\n",
     "        # prepend b'\\xef' on testnet, b'\\x80' on mainnet\n",
+    "        if testnet:\n",
+    "            prefix = b'\\xef'\n",
+    "        else:\n",
+    "            prefix = b'\\x80'\n",
     "        # append b'\\x01' if compressed\n",
+    "        if compressed:\n",
+    "            suffix = b'\\x01'\n",
+    "        else:\n",
+    "            suffix = b''\n",
     "        # encode_base58_checksum the whole thing\n",
-    "        pass"
+    "        return encode_base58_checksum(prefix + secret_bytes + suffix)"
    ]
   }
  ],
